# DJVU-Encoder-Rust

./: .gitignore  Cargo.toml  LICENSE  README.md  cargo.toml  copy-code-only.py  ddjvu  djvudump  test_multipage_no_navm.rs
cargo-checker/src/: main.rs
examples/: README_single_image_iw44_test.md  analyze_jb2_data.rs  compound_document.rs  create_djvu.rs  create_single_page_djvu.rs  debug_cc_image.rs  debug_full_jb2.rs  debug_jb2_content.rs  debug_mask.rs  minimal_test.rs  simple_jb2_test.rs  test_bg_only.rs  test_border_fix.rs  test_djvu_jb2.rs  test_iw44_integration.rs  test_iw44_simple.rs  test_jb2_encoding.rs  test_multipage.rs  test_zp_jb2.rs
src/: arithmetic_coder.rs  arithtable.rs  lib.rs  new 2.md
src/annotations/: annotations.md  annotations.rs  hidden_text.rs  lib.rs  mod.rs  string.rs
src/asm/: zpcodec_fixed.asm
src/core/: DJVUFile.rs  DJVUGlobal.rs  DJVUMessage.rs
src/doc/: DJVUDir.rs  DJVUDoceditor.rs  DJVUDocument.rs  DJVUNav.rs  builder.rs  djvu_dir.rs  djvu_doceditor.rs  djvu_document.rs  document_encoder.rs  encoder.rs  mod.rs  page_collection.rs  page_encoder.rs  to-do.md
src/encode/: huffman.rs  iw44_ffi.rs  mod.rs
src/ffi/: iw44_bridge.cpp  iw44_ffi.rs  mod.rs  simple_iw44_bridge.cpp  (+1 more)
tests/: bzz_compare_test.rs  bzz_dirm_test.rs  bzz_simple_test.rs  integration_tests.rs  iw44_encoding_tests.rs  iw44_roundtrip_test.rs  jb2_header_diagnostic.rs  jb2_multi_symbol_test.rs  jb2_new_mark_test.rs  jb2_pipeline_test.rs  jb2_reset_test.rs  jb2_symbol_djvu_test.rs  multipage_alternate_test.rs  multipage_compound_test.rs  zp_isolation_test.rs
(+102 files in other folders)
